[gd_scene load_steps=26 format=3 uid="uid://dqy8eus7xktlq"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_jg8iq"]
[ext_resource type="Texture2D" uid="uid://dnl8tal30m0jt" path="res://assets/characters/ais/neuro_icon.png" id="2_3ldxe"]
[ext_resource type="Texture2D" uid="uid://cdfsvbsr2p0cs" path="res://assets/ui/ai_health_bar.png" id="3_h2em7"]
[ext_resource type="Texture2D" uid="uid://crvnx5i06xcb6" path="res://assets/characters/collab_partners/vedal_icon.png" id="3_s2mue"]
[ext_resource type="Texture2D" uid="uid://oeaqv4apnwu" path="res://assets/ui/health_bar_over.png" id="5_o2woi"]
[ext_resource type="Texture2D" uid="uid://tnubhijqfq02" path="res://assets/ui/health_bar_under.png" id="6_jflyq"]
[ext_resource type="Texture2D" uid="uid://cjb1btwxi635u" path="res://assets/ui/collab_partner_bar.png" id="6_uyxdy"]
[ext_resource type="Texture2D" uid="uid://chm3hdjvrvpig" path="res://assets/ui/exp_bar_under.png" id="6_v5tns"]
[ext_resource type="Texture2D" uid="uid://bbm64wjax8o6h" path="res://assets/ui/exp_bar.png" id="7_0d2lw"]
[ext_resource type="Script" path="res://scripts/ui/switch_sign.gd" id="8_uoevg"]
[ext_resource type="Texture2D" uid="uid://cyoxbibstvfo0" path="res://assets/characters/switch_follow.png" id="9_3uhpn"]
[ext_resource type="Texture2D" uid="uid://bddi1an6eb8jt" path="res://assets/characters/switch_loading_sheet.png" id="9_rqnyn"]
[ext_resource type="Texture2D" uid="uid://dpp2axtcrxlj4" path="res://assets/characters/switch_stop.png" id="10_mrocx"]
[ext_resource type="PackedScene" uid="uid://dmjrphqhgreq5" path="res://scenes/ui/directive_menu.tscn" id="10_x64bl"]
[ext_resource type="PackedScene" uid="uid://dotgxtot02sw5" path="res://scenes/ui/upgrade_menu.tscn" id="11_52que"]
[ext_resource type="Material" uid="uid://csxlxcwxw3h3v" path="res://assets/shaders/rainbow.tres" id="12_x3twt"]
[ext_resource type="Texture2D" uid="uid://dst82e5edv1pj" path="res://assets/ui/exp_bar_over.png" id="14_7prpg"]
[ext_resource type="PackedScene" uid="uid://dd3l4otjd8b3x" path="res://scenes/ui/pause_manager/pause_manager.tscn" id="14_sxq4j"]
[ext_resource type="PackedScene" uid="uid://d2avq1nqugasc" path="res://scenes/achievements/achievement_display.tscn" id="15_hw7wa"]
[ext_resource type="PackedScene" uid="uid://duk3c2w31y5sg" path="res://scenes/ui/victory_display.tscn" id="16_br1yu"]

[sub_resource type="Animation" id="Animation_gmo1s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Loading:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Follow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Stop:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Loading:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_j8n00"]
resource_name = "follow"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Loading:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Stop:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Follow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_o12nq"]
resource_name = "loading"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Loading:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Follow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.00354957),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Stop:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Loading:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_mc1q5"]
resource_name = "new_animation"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Stop:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Loading:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Follow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ceh2"]
_data = {
"RESET": SubResource("Animation_gmo1s"),
"follow": SubResource("Animation_j8n00"),
"loading": SubResource("Animation_o12nq"),
"stop": SubResource("Animation_mc1q5")
}

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_jg8iq")

[node name="FPSCounterUpdateTimer" type="Timer" parent="."]
autostart = true

[node name="HealthBars" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_top = -36.0
offset_right = 43.0
offset_bottom = 4.0

[node name="AIIcon" type="TextureRect" parent="HealthBars"]
layout_mode = 0
offset_left = 2.0
offset_top = 141.0
offset_right = 34.0
offset_bottom = 173.0
texture = ExtResource("2_3ldxe")
stretch_mode = 2

[node name="CollabPartnerIcon" type="TextureRect" parent="HealthBars"]
layout_mode = 0
offset_left = 20.0
offset_top = 140.0
offset_right = 52.0
offset_bottom = 172.0
texture = ExtResource("3_s2mue")
stretch_mode = 2

[node name="AIHealthBar" type="TextureProgressBar" parent="HealthBars"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 14.0
offset_top = 81.0
offset_right = 78.0
offset_bottom = 145.0
value = 100.0
fill_mode = 3
texture_under = ExtResource("6_jflyq")
texture_progress = ExtResource("3_h2em7")

[node name="AiBarFull" type="Sprite2D" parent="HealthBars"]
unique_name_in_owner = true
visible = false
material = ExtResource("12_x3twt")
position = Vector2(46, 113)
texture = ExtResource("3_h2em7")

[node name="AiOver" type="TextureRect" parent="HealthBars"]
layout_mode = 0
offset_left = 14.0
offset_top = 81.0
offset_right = 78.0
offset_bottom = 145.0
texture = ExtResource("5_o2woi")

[node name="CollabPartnerHealthBar" type="TextureProgressBar" parent="HealthBars"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 29.0
offset_top = 81.0
offset_right = 93.0
offset_bottom = 145.0
value = 100.0
fill_mode = 3
texture_under = ExtResource("6_jflyq")
texture_progress = ExtResource("6_uyxdy")

[node name="CollabPartnerBarFull" type="Sprite2D" parent="HealthBars"]
unique_name_in_owner = true
visible = false
material = ExtResource("12_x3twt")
position = Vector2(61, 113)
texture = ExtResource("6_uyxdy")

[node name="CollabOver" type="TextureRect" parent="HealthBars"]
layout_mode = 0
offset_left = 29.0
offset_top = 81.0
offset_right = 93.0
offset_bottom = 145.0
texture = ExtResource("5_o2woi")

[node name="SwitchSign" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 28.0
offset_top = 132.0
offset_right = 68.0
offset_bottom = 172.0
script = ExtResource("8_uoevg")

[node name="Follow" type="Sprite2D" parent="SwitchSign"]
visible = false
texture = ExtResource("9_3uhpn")

[node name="Loading" type="Sprite2D" parent="SwitchSign"]
visible = false
texture = ExtResource("9_rqnyn")
hframes = 3

[node name="Stop" type="Sprite2D" parent="SwitchSign"]
visible = false
texture = ExtResource("10_mrocx")

[node name="SwitchPlayer" type="AnimationPlayer" parent="SwitchSign"]
libraries = {
"": SubResource("AnimationLibrary_1ceh2")
}

[node name="EXPBar" type="TextureProgressBar" parent="."]
offset_top = 3.0
offset_right = 640.0
offset_bottom = 119.0
texture_under = ExtResource("6_v5tns")
texture_over = ExtResource("14_7prpg")
texture_progress = ExtResource("7_0d2lw")
metadata/_edit_lock_ = true

[node name="LevelCounter" type="Label" parent="."]
offset_left = 10.0
offset_top = 16.0
offset_right = 50.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DirectiveMenu" parent="." node_paths=PackedStringArray("pause_manager") instance=ExtResource("10_x64bl")]
visible = false
pause_manager = NodePath("../PauseManager")

[node name="UpgradeMenu" parent="." node_paths=PackedStringArray("pause_manager") instance=ExtResource("11_52que")]
pause_manager = NodePath("../PauseManager")

[node name="PauseManager" parent="." node_paths=PackedStringArray("upgrades_menu", "directive_menu") instance=ExtResource("14_sxq4j")]
visible = false
upgrades_menu = NodePath("../UpgradeMenu")
directive_menu = NodePath("../DirectiveMenu")

[node name="AchievementDisplay" parent="." instance=ExtResource("15_hw7wa")]
visible = false

[node name="VictoryDisplay" parent="." node_paths=PackedStringArray("pause_manager") instance=ExtResource("16_br1yu")]
pause_manager = NodePath("../PauseManager")

[node name="FPSCounter" type="Label" parent="."]
offset_left = 541.0
offset_top = 331.0
offset_right = 623.0
offset_bottom = 357.0
theme_override_font_sizes/font_size = 16
text = "fps: 24"
horizontal_alignment = 2

[connection signal="timeout" from="FPSCounterUpdateTimer" to="." method="_on_fps_counter_update_timer_timeout"]
